--- a/survey.tex
+++ b/survey.tex
@@ -63,12 +63,7 @@
 
 \begin{document}
 %
-% paper title
-% Titles are generally capitalized except for words such as a, an, and, as,
-% at, but, by, for, in, nor, of, on, or, the, to and up, which are usually
-% not capitalized unless they are the first or last word of the title.
-% Linebreaks \\ can be used within to get better formatting as desired.
-% Do not put math or special symbols in the title.
+
 \title{Minerando dados em grandes quantidades - \textit{Big Data}: SURVEY}
 
 
@@ -97,18 +92,22 @@ Email: fbln@ecomp.poli.br}
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
-Este artigo pretende fazer uma explanação de um novo paradigma; o paradigma da informação ilimitada, conhecido como "Big Data" e, propor uma solução para recuperação de informação para grandes espaços de buscas. Atrelado à este paradigma e, reforçando o conceito de que uma nova onda está à frente para a Internet, onde coisas se conectam com coisas, conhecida como Internet das coisas ou simplesmente IoT. A Internet das coisas é também conhecido como a "terceira onda da Internet", o entendimento seria algo como; computadores conectados a eletrodomésticos; telefones celulares ligados à semáforos, recebendo informações sobre o tempo, acidentes e congestionamento e, passar esta informação ao carro, que avisa o condutor que está à frente. Esta é a realidade que se aproxima e pretendemos analisar neste artigo como os novos ``atores'', ou coisas interagem com os atores humanos tradicionais.
+Este artigo pretende fazer uma explanação de um novo paradigma o da informação ilimitada, conhecido como ``Big Data'' e, propor uma solução para recuperação de informação para grandes espaços de buscas. Atrelado a este paradigma e, reforçando o conceito de que uma nova onda está à frente da Internet, onde coisas se conectam entre si, conhecida como Internet das coisas ou simplesmente IoT. A Internet das coisas é também conhecido como a ``terceira onda da Internet''; computadores conectados a eletrodomésticos; telefones celulares ligados à semáforos, recebem informações sobre o tempo, acidentes e congestionamento e, passar esta informação ao carro, que avisa o condutor que está à frente. Conectar esses novos ``atores'' ou coisas que interagem com os atores humanos é minerar dados na Internet das coisas, extrair informação relevante e aplicar na solução dos problemas do dia a dia. Assim pretendemos modelar uma solução à problemática do logística de cargas aplicada à realidade brasileira.
 \end{abstract}
 
 \vspace{0.1cm}
 
-\textit{\textbf{Palavras-chave: Big Data, Mapear e Reduzir, Hadoop, Enxame de robôs, Inteligência em enxames, Aprendizado em profundidade, Aprendizado de máquina, Otimização por enxame de partículas, Otimização por enxame de formigas, Pesquisa por cardume de peixes, Logística, Roteamento }}.
+\textit{\textbf{Palavras-chave: Big Data, Mapear e Reduzir, Hadoop, Enxame de robôs, Inteligência em enxames, Aprendizado em profundidade, Aprendizado de máquina, Otimização por enxame de partículas, Otimização por enxame de formigas, Pesquisa por cardume de peixes, Logística, Roteamento }
+}.
 
 \vspace{0.1cm}
 
-\textit{Abstract -- This paper intends to make an explanation of a new paradigm, the paradigm of unlimited information known as "Big Data" and to propose a solution for information retrieval for large spaces searches. Coupled to this paradigm and, reinforcing the concept that a new wave lies ahead for the Internet, where things connect with things, we are not as well known Internet of Things   or simply IoT. The IoT is also known as the "third wave of the Internet," the acronym is confirmed because something like computers connected to home appliances, mobile phones connected to the traffic lights, getting weather information, accidents and congestion and to pass this information to the car, which warns the driver what's ahead. This is the reality that approaching and we intend to analyze in this article how the new players, things, interact with traditional actors humans.}
+\textit{Abstract -- This paper intends to make an explanation of a new paradigm, the paradigm of unlimited information known as "Big Data" and to propose a solution for information retrieval for large spaces searches. Coupled to this paradigm and, reinforcing the concept that a new wave lies ahead for the Internet, where things connect with things, we are not as well known Internet of Things   or simply IoT. The IoT is also known as the "third wave of the Internet," the acronym is confirmed because something like computers connected to home appliances, mobile phones connected to the traffic lights, getting weather information, accidents and congestion and to pass this information to the car, which warns the driver what's ahead. This is the reality that approaching and we intend to analyze in this article how the new players, things, interact with traditional actors humans.
+So we intend to model a solution to the problem of logistic of loads applied to the Brazilian reality.
+}
 
-\textit{Keywords: Big Data, Map Reduce, Hadoop, Swarm Robotics, Swarm Intelligence, Deep Learning, Machine Learning, Particle Swarm Optimization, Ant Colony Optimization, Fish School Search, Logistic, Routing}.
+\textit{Keywords: Big Data, Map Reduce, Hadoop, Swarm Robotics, Swarm Intelligence, Deep Learning, Machine Learning, Particle Swarm Optimization, Ant Colony Optimization, Fish School Search, Logistic, Routing
+}.
 
 
 
@@ -130,34 +129,25 @@ Inferir sobre algum assunto agora poderá ser coisa do passado. Astrônomos atua
 dados disponíveis para outros utilizarem, as ciências biológicas agora tem tradição em depositar seus avanços 
 científicos em repositórios públicos, redes sociais estão focadas na Web; Facebook, 
 LinkedIn, Microsoft, Tweeter e Yahoo sobrevivem coletando informações e repassando-as as empresas de telemarketing, 
-empresas de comércio eletrônico como Amazon, Submarino, Americanas.com, Magazine Luiza, utilizam essas informações 
+empresas de comércio eletrônico como Amazon, Submarino, Americanas.com, Magazine Luíza, utilizam essas informações 
 para vender mais e melhor, artigos científicos dos mais variados assuntos, das mais variadas áreas alimentam, 
 todos os dias,  com milhões de informações os \textit{Data Centers}, isso é o \textit{Big Data}.
 
 
-Para fazer frente a esse novo paradigma e extrair informações com eficiência uma nova abordagem algorítmica se faz necessário. 
-As técnicas tradicionais de busca tradicionais não são eficientes para resolver muitos problemas com grande complexidade, i.e. ordens de grandeza 
+Para fazer frente a esse novo paradigma e extrair informações com eficiência novas abordagem algorítmica se faz necessário. 
+As técnicas tradicionais de busca não são eficientes para resolver muitos problemas com grande complexidade, i.e. ordens de grandeza 
 dantes inimagináveis, especialmente as que possuem complexidade exponenciais, geradas por explosões combinatórias, felizmente, 
 muitos desses problemas não-triviais são eficientemente resolvidos por soluções naturais \cite{Swarm_Medeiros}.
 
-Para resolver a problemática da explosão combinatória de informações, são desenvolvidas técnicas para reduzir o tempo de busca, 
+Para resolver a problemática da explosão combinatória das informações são desenvolvidas técnicas para reduzir o tempo de busca, 
 tornando os custos computacionais mais aceitáveis, na medida que não exploram todas as possibilidades no caminho até a 
 solução procurada, somente o caminho curto onde é mais provável de se encontrar a solução, a essa técnica dá-se o nome de heurística.
 
-As meta-heurísticas são soluções encontradas nas mais diversas espécies de seres vivos, por exemplo, as formigas quando 
-vão em busca de alimentos, facilmente encontram um caminho mais curto entre o ninho e a fonte de alimentos, cardumes de peixes 
-executam movimentos aparentemente aleatórios mas, quando em grupo, são precisos para fuga dos predadores, bandos de pássaros 
-quando em busca de novos locais para ninhos ou de alimento, inspiram os mais diversos algoritmos inteligentes baseados em 
-populações de animais sociáveis, demonstrando que há uma inteligência coletiva nessas populações, desenvolvida ao longo do 
-tempo e das interações entre essas espécies sociáveis e o meio ambiente. Essa classe de algoritmos, metaforiza o comportamento 
-de tais populações, e promoveu o desenvolvimento de uma área que hoje é conhecida como computação bio inspirada ou computação 
-natural. Essa área investiga a relação entre a computação e a biologia (e mesmo a sociologia), estudando soluções de buscas 
-e otimização, modelando problemas mais eficientemente, baseado nas elegantes soluções encontradas pela natureza.
 
 
 \section{Objetivos}
 
-Este artigo ``Survey'' tem como objetivo analisar a problemática do Big Data e seus paradigmas apresentados atualmente, os 5 V's, extrair informações dele para propor solução à logística de cargas aplicada `a realidade das rodovias brasileiras, objetivando assim uma alternativa ao traçado de rotas determinísticas, inspirado em buscas no \textit{Big Data}. 
+Este artigo ``Survey'' tem como objetivo analisar a problemática do Big Data e seus paradigmas apresentados atualmente, extrair informações dele para propor solução à logística de cargas aplicada à realidade brasileira, objetivando assim uma alternativa ao traçado de rotas determinísticas, inspirado em buscas no \textit{Big Data}.
 
 
 
@@ -171,6 +161,8 @@ Para executarmos este \textit{Survey}, foram primeiramente definidas as seguinte
  \item[C.] Escolha dos Filtros;
  \item[D.] Leitura dos artigos.
 \end{enumerate}
+
+\subsection{Detalhamento das etapas}
 
 \begin{enumerate}
  \item[A.] Coleta dos dados\\
@@ -284,20 +276,18 @@ Por mais simples e menor que seja, três critérios são considerados os mais im
 
 "Em 2010 empresas e usuários armazenaram mais de 13 exabytes de novos dados" \cite{bigdataQualquerUm}.
 
-Atrelada a essa produção massiva de dados, uma nova onda está sendo vislumbrada, é chamada de ''A terceira onda da Internet''
-, onde coisas se conectam com coisas; produtos nas gôndolas do supermercado com um novo tipo de etiqueta se conectam a uma 
-leitora de radio frequência à alguns metros de distância, contabilizando o total do estoque em segundos; o consumidor leva 
-seus produtos escolhidos ao caixa desse supermercado, pagando a conta sem precisar retirar qualquer produto do carrinho. 
-Ao introduzir esses produtos na geladeira, será possível saber quando expira a data de validade de determinados produtos, sem 
-precisar abri-la, e quando acabarem esses produtos, a própria geladeira informará ao supermercado a falta deles, reservando 
-o próximo rol de compras. Assim será essa onda de coisas conectadas, chamada de Internet das Coisas ou \textit{Internet of Things} (IoT),
-que fará com que os dados no \textit{Big Data} sofram explosão combinatória de informações multiplicando exponencialmente as dimensões deste.
+O paradigma dos 5 V’s exemplifica o Big data, este pode ser descrito como: 
 
-
-O paradigma dos 5 V’s é descrito como: Volume de dados; Velocidade para acessar esses dados; 
-Variedade de informações; Veracidade nos dados encontrados e Valor atribuído aos dados. 
-Dentre as mais diversas ferramentas existentes destacamos algumas já consagradas como Map Reduce, da ``framework'' Hadoop,
-e sua congênere desenvolvida pelo Google. Essas são as mais conhecidas dos ``aventureiros'' que estão desbravando o Big Data. Não será uma tarefa trivial inferir e desenvolver novas ferramentas, pois o Big Data tem 
+\begin{enumerate}
+	\item[1 --]Volume de dados;
+	\item[2 --]Velocidade para acessar esses dados;
+	\item[3 --]Variedade de informações;
+	\item[4 --]Veracidade nos dados encontrados;
+	\item[5 --]Valor atribuído aos dados.
+\end{enumerate}
+  
+Dentre as mais diversas ferramentas encontradas destacamos Map Reduce, da ``framework'' Hadoop, por ser de livre uso ou ``freeware'' ter grande tolerância `a falhas e fácil implementação, talvez explique a opção de baixo custo.
+A congênere desenvolvida pelo Google também tem seu destaque. Essas são as mais conhecidas dos ``aventureiros'' que estão desbravando o Big Data. Não será uma tarefa trivial inferir e desenvolver novas ferramentas, pois o Big Data tem 
 assumido, nos mais recentes anos proporções gigantescas como descrito na tabela 1
 
 
@@ -325,6 +315,16 @@ Ano & Qtd & Unidade & Múltiplo \\
 \end{tabular}
 \end{table}
 
+Atrelada a essa produção massiva de dados, uma nova onda está sendo vislumbrada, é chamada de ''A terceira onda da Internet''
+, onde coisas se conectam com coisas; produtos nas gôndolas do supermercado com um novo tipo de etiqueta se conectam a uma 
+leitora de radio frequência à alguns metros de distância, contabilizando o total do estoque em segundos; o consumidor leva 
+seus produtos escolhidos ao caixa desse supermercado, pagando a conta sem precisar retirar qualquer produto do carrinho. 
+Ao introduzir esses produtos na geladeira, será possível saber quando expira a data de validade de determinados produtos, sem 
+precisar abri-la, e quando acabarem esses produtos, a própria geladeira informará ao supermercado a falta deles, reservando 
+o próximo rol de compras. Assim será essa onda de coisas conectadas, chamada de Internet das Coisas ou \textit{Internet of Things} (IoT),
+que fará com que os dados no \textit{Big Data} sofram explosão combinatória de informações multiplicando exponencialmente as dimensões deste.
+
+
 As redes sociais são um arcabouço de informações sobre todo tipo de assunto vivenciado pelas pessoas, inclusive situações que dizem respeito ao nosso ambiente de pesquisa.
 O cenário abaixo, encontrado numa rede social, exemplifica a sequência de informações retiradas do Twitter.
 O Twitter é uma rede social, onde os usuários escrevem num pequeno espaço com cerca de 140 caracteres, os mais diversos assuntos. A ideia inicial do Twitter era que se comportasse como um ``SMS da Internet'' \cite{Twitter2015}. As informações são enviadas aos usuários, conhecidas como twittes, em tempo real e, também enviadas aos usuários seguidores que tenham assinado para recebê-las. A seguir pode-se verificar uma sequência de twittes da Polícia Rodoviária Federal de Santa Catarina:
@@ -332,11 +332,11 @@ O Twitter é uma rede social, onde os usuários escrevem num pequeno espaço com
 \begin{figure}[!ht]
 \caption{Twitter	}
 	\subfloat[Twitte - 1 \label{subfig-1:dummy}]{%
-		\includegraphics[width=60mm, height=70mm]{Figuras/twittePRF.png}
+		\includegraphics[width=80mm, height=70mm]{Figuras/twittePRF.png}
 	}
 	\quad \quad \quad \quad
 	\subfloat[Twitte - 2\label{subfig-2:dummy}]{%
-		\includegraphics[width=60mm, height=70mm]{Figuras/twittePRF2.png}
+		\includegraphics[width=80mm, height=70mm]{Figuras/twittePRF2.png}
 	}
 	\label{fig:twitter}
 \end{figure}
@@ -359,29 +359,46 @@ O processo de tratar as informações, retirando-lhes o ``lixo''; transformando 
 
 Para trabalhar com os dados do Big Data foi criado um tipo arquitetura para computadores trabalharem em conjunto formando um \textit{cluster} essa arquitetura é conhecida como \textit{filesystem}\footnote{\textit{Filesystem}. ou sistema de arquivos, referem-se à forma como os dados são armazenados, organizados e acessados, pelo sistema operacional, em cada partição no disco (ou no disco inteiro)}.
 
-O goolgle criou o \cite{Filesystem} HadDoop FileSystem (HDFS).
+O goolgle é o maior ator do \textit{Big Data}, ele desenvolveu um modelo computacional para pesquisas na Web, e tem apresentado o uso eficiente da técnica MapReduce com modelos de programação combinados com tabelas conhecidas como BigTable. Introduziu o Google File System \cite{Filesystem}. 
+
+Outros grupos de pesquisadores desenvolveram Hadoop Distributed File System (HDFS) que é hoje o sistema de arquivos para Big Data mais utilizado.\cite{Lange2015}
+
+
+\section{Hadoop -- MapReduce}
+
+Hadoop MapReduce é uma técnica recente, especialmente, projetado para o processamento de grandes conjuntos de dados distribuídos. Hadoop nasceu do Apache. O Apache é um servidor Web, o tal como o Hadoop. Servidores Web são computadores especialmente dedicados a traduzir programas feitos para Internet em página da Internet as quais pessoas possam ler, quando conectam-se `a Internet. MapReduce é um modelo de programação para expressar cálculo distribuído em quantidade maciça de
+dados e uma estrutura de execução para dados em larga escala e processamento em clusters de servidores. Foi originalmente desenvolvido pela Google e construído sobre o bem-conhecido
+princípios em paralelo e processamento distribuído.
+O Hadoop é a implementação de código aberto do MapReduce escrito em java que fornece, tolerância a falhas, escalável e confiável técnica de computação distribuída.
+O configurar o ambiente Hadoop envolve um grande número de parâmetros que são essenciais para alcançar um excelente desempenho. Ele permite que desenvolveres de aplicações distribuídas sem qualquer conhecimento possam programar computadores. 
+Um "Valor" e uma "chave" formam um par de dados, isso é a estrutura básica de dados do MapReduce. 
+Chaves e valores podem ser da forma de dados primitivos; como inteiros, ponto flutuante,  e bytes brutos ou podem ser estruturas arbitrárias e complexas (listas, tuplas matriz associativa, e outras)
+
 
 \subsection{Hadoop - Map Reduce - Big Data}\label{arte:palavraChave:HadoopMapReduce}
 
-Portanto o \textit{Big Data}, devido à sua natureza, é definido como um paradigma entre as grandezas: \textbf{Velocidade}, \textbf{Variedade} e \textbf{Volume}.
+O \textit{Big Data}, devido à sua natureza, foi definido como o paradígma dos 5 V's entre as grandezas: \textbf{Volume}, \textbf{Velocidade}, \textbf{Variedade}, \textbf{Veracidade} e \textbf{Valor}.
 O roteiro seguido pela informação desde o local onde é produzida até que possa ser utilizada é  exemplificado na imagem a seguir:
 
 \begin{figure}[ht]
 \centering
 \caption{Big Data e Arquitetura Haddop}
-\includegraphics[width=100mm, height=80mm]{Figuras/BigDataComponents.jpg}
+\includegraphics[width=80mm, height=80mm]{Figuras/BigDataComponents.jpg}
 \end{figure}
 
-A camada mais baixa da imagem, onde se lê \textit{Processing \& Original Data} é a origem do \textit{Big Data}, onde estão os dados ``frios''. Entre as camadas \textit{Location-aware File Systems} e \textit{Management \& Security} é o roteiro seguido pela informação para ser trasformada em dados ``quentes''. A tecnologia utilizada, neste mestrado, para tratar os dados será o Hadoop, devido ao baixo custo de implementação e por ser uma tecnologia aberta, de livre utilização, conhecida como \textit{Open Source}. O Haddop é uma arquitetura de milhares de computadores interligados e espalhados e pela Intenet. Esses computadores são especializados em extrair dados do \textit{Big Data} e transformá-los em dados relevantes (quentes). <<\textbf{citar}>>
+A camada mais baixa da imagem, onde se lê \textit{Processing \& Original Data} é a origem do \textit{Big Data}, onde estão os dados ``frios''. Entre as camadas \textit{Location-aware File Systems} e \textit{Management \& Security} é o roteiro seguido pela informação para ser trasformada em dados ``quentes''. A tecnologia utilizada, para tratar os dados poderá ser o Apache Hadoop ou similar, devido ao baixo custo de implementação e por ser uma tecnologia aberta, de livre utilização, conhecida como \textit{Open Source}. O Haddop é uma arquitetura de milhares de computadores interligados e espalhados e pela Internet. Esses computadores são especializados em extrair dados do \textit{Big Data} e transformá-los em dados relevantes (quentes). \cite{Conejero2015}
 
-O Haddop funciona com um agrupamento em paralelo desses computadores, conhecido como \textit{cluster}. Esse \textit{cluster} tem a característica de grande escalabilidade; em torno de 3 000 computadores, dependendo da construção, e tolerância a falhas; quando um computador do \textit{cluster} fica inoperante  ``cai'', os dados são salvos em outro computador. A estrutura de diretórios do Hadoop é conhecida como \textit{Hadoop File System} (HDFS). O HDFS foi especialmente construído para lidar com as características descritas anteriormente.
+O Haddop funciona com um agrupamento em paralelo desses computadores, conhecido como \textit{cluster}. Esse \textit{cluster} tem a característica de grande escalabilidade; em torno de 3 000 computadores na operação de Map, dependendo da construção, e tolerância a falhas; quando um computador do \textit{cluster} fica inoperante  ``cai'', os dados são salvos em outro computador. A estrutura de diretórios do Hadoop é conhecida como \textit{Hadoop File System} (HDFS). O HDFS foi especialmente construído para lidar com as características descritas anteriormente.
 
 
 
 \subsection{Map Reduce - Big Data}\label{arte:palavraChave:MapReduceBigData}
 
 
-O Map-Reduce é uma técnica conhecida desde a linguagem Lisp, que permite mapear o \textit{cluster} e reduzir conforme um par de informações <chave:valor>. A imagem a seguir exemplifica a técnica Map-Reduce:
+O Map-Reduce é uma técnica conhecida desde a linguagem Lisp, que permite mapear o \textit{cluster} e reduzir conforme um par de informações \<chave:valor\>. 
+O Hadoop implementa o paradigma MapReduce
+
+A imagem a seguir exemplifica a técnica Map-Reduce:
 
 \begin{figure}[ht]
 \centering
@@ -389,31 +406,50 @@ O Map-Reduce é uma técnica conhecida desde a linguagem Lisp, que permite mapea
 \includegraphics[width=100mm, height=80mm]{Figuras/MapReduce.jpg}
 \end{figure}
 
-Este Map-Reduce, modelo de computação paralela para ser utilizado na Internet foi proposto pelo Google
-\cite{Dean2008}.
+Durante a operação de Map podem estar envolvidos \textit{clusters} de até 3.000 computadores, caso seja utilizada a infraestrutura Hadoop. Na etapa de Recude o \textit{cluster} cai consideravelmente, conduto o consumo de energia é bantante considerável. \cite{Conejero2015}
+Este modelo de Map-Reduce, foi o modelo de computação paralela, proposto pelo Google para ser utilizado na Internet \cite{Dean2008}.
 
-\subsection{Data Mining - Swarm Inteligence}\label{arte:palavraChave:Swarm}
+Muitas técnicas tem sido utilizadas para executar a operação de MAP, até virtualização de máquinas, contudo o grande poder do MapReduce está no \textit{cluster} que é implementado com arquitetura em nuvem \textit{Cloud Computing}.
+
+
+>>>> artigo: A Modified Key Partitioning for BigData Using MapReduce in Hadoop
+
+\section{Data Mining}
+
+Técnicas de mineração de dados trabalham com dados estruturados, para poder extrair informações relevantes.
+Um dos maiores problemas na extração de informações são os ``missing data'' ou dados ausentes. 
+
+O caminho da extração dos dados até a mineração dados e por fim extração de conhecimento é longa, na figura a seguir temos um exemplo desse caminho:
+
+\begin{figure}[ht]
+\centering
+\caption{Minerando dados no Big Data}
+\flushleft
+\includegraphics[width=90mm, height=75mm]{Figuras/FayyadSemFundo.png}
+\end{figure}
+
+
+O Big data está repleto em dados ausentes e inconsistentes. Algumas técnicas de mineração de dados são fortemente influenciadas pelas informações de entrada, dentre elas as Árvores de decisão ou ``Decision Tree'', para tanto utilizar essa técnica para extrair informações do Big data pode causar levar a inconsistências incontornáveis.
+Utilizar técnicas de mineração de dados é para além de extrair dados, é extrair conhecimento e com isso poder predizer os resultados à saída aquando determinados dados à entrada ocorrem. \cite{Amin2015}
+
 
 \subsection{Data Mining - Big Data}\label{arte:palavraChave:DataMiningBigData}
 
-\subsection{Data Mining - Swarm Robotics}\label{arte:palavraChave:Robotics}
-
-O rápido crescimento da Internet, tem trazido, a reboque, o contínuo crescimento da insegurança nos computadores e sistemas \cite{Barford2007}.
-Ataques utilizando à computadores através de robôs.
-
-\subsection{Deep Learning}\label{arte:palavraChave:Deep}
 
 
 
-\subsection{Machine Learning}\label{arte:palavraChave:Machine}
+\section{Meta-heurísticas}
 
-O desafio dos 3 V's (Velocidade, Variedade e Volume) pode ser um fator determinístico na escolha da ferramenta mais adequada para se analisar dados do \textit{Big Data} e extrair informação. As árvores de decisão são algorimos rápidos, contudo dados impuros podem comprometer o desepenho desse algoritmo. A fase de extração dos dados do \textit{Big Data} são fortemente influenciáveis pelas variáveis escolhidas, \cite{DecisionTree} isso pode representar o desafio maior para implementar esta técnica, na figura a seguir exemplificamos essa tarefa:
 
-desenhar a figura
-
-% \begin{tikzpicture}
-%  \draw (0,0) -- (2,1); %reta
-% \end{tikzpicture}
+As meta-heurísticas são soluções encontradas nas mais diversas espécies de seres vivos, por exemplo, as formigas quando 
+vão em busca de alimentos, facilmente encontram um caminho mais curto entre o ninho e a fonte de alimentos, cardumes de peixes 
+executam movimentos aparentemente aleatórios mas, quando em grupo, são precisos para fuga dos predadores, bandos de pássaros 
+quando em busca de novos locais para ninhos ou de alimento, inspiram os mais diversos algoritmos inteligentes baseados em 
+populações de animais sociáveis, demonstrando que há uma inteligência coletiva nessas populações, desenvolvida ao longo do 
+tempo e das interações entre essas espécies sociáveis e o meio ambiente. Essa classe de algoritmos, metaforiza o comportamento 
+de tais populações, e promoveu o desenvolvimento de uma área que hoje é conhecida como computação bio inspirada ou computação 
+natural. Essa área investiga a relação entre a computação e a biologia (e mesmo a sociologia), estudando soluções de buscas 
+e otimização, modelando problemas mais eficientemente, baseado nas elegantes soluções encontradas pela natureza.
 
 
 \section{Enxame de partículas}\label{arte:enxames}
@@ -433,8 +469,9 @@ um enxame de pássaros. Os 5 princípios da inteligência de enxame segundo  Cha
 	\item{Adaptabilidade: capacidade de se adequar as variações ambientais}
 \end{itemize}
 
-
-\subsection{Particle Swarm Optimization - (PSO)}\label{arte:algo:pso}
+\quad
+\flushleft \textbf{Swarm Optimization - (PSO)}
+\vspace{0.1cm}
 
 Kennedy e Eberhart (1995), criaram a popular Otimização por Enxame de Partículas do inglês \textit{Particle Swarm Optimization} - (PSO), 
 que na verdade é uma técnica de otimização de funções não-lineares baseado em populações. Foi inspirado no comportamento
@@ -467,11 +504,13 @@ Os coeficientes $c_1r_1j(t)$ e $c_2r_2j$ são números que variam entre 0 e 1 pa
 O coeficiente $Nbest - x_i(t)$ é a melhor posição da partícula na vizinhança e $Lbest - x_i(t)$ é a melhor posição
 numa região que engloba essa vizinhança.
 
-\subsection{Ant Colony Optimization - (ACO) }\label{arte:algo:aco}
+\quad
+\flushleft \textbf{Ant Colony Optimization - (ACO)}
+\vspace{0.1cm}
 
 A optimização por colônia de formigas ou \textit{Ant Colony Optimization} - (ACO) é uma técnica de otimização que foi
 introduzida desde os anos 90's \cite{Blum2005} baseado no comportamento forrageiro de colônia de formigas.
-O comportamento forrageiro de diversas espécies \cite{Dorigo2005} é objeto de estudo das ciências biológicas pois os animais predadores 
+O comportamento forrageiro em diversas espécies \cite{Dorigo2005} é objeto de estudo das ciências biológicas pois os animais predadores 
 procuram otimizar seu ganho de proteína, ao comer sua presa, minimizando o gasto de energia, ou minimizando o esforço para
 caçar, capturar e comer essa presa. Esse comportamento é explorado pelo ACO para buscar soluções aproximadas para um
 problema de otimização discreto, para problemas de otimização contínuos e para problemas de roteamento em telecomunicações.
@@ -485,6 +524,33 @@ A equação da evaporação do feromônio no ambiente é segundo a fórmula:
 \begin{equation}
 p(i,j)= \frac{[\tau (i,j)]^{\alpha }.[\eta (i,j)]^{\beta}}{\sum [\tau (i,j)]^{\alpha }.[\eta (i,j)]^{\beta}}
 \end{equation}
+
+
+
+\subsection{Data Mining - Swarm Inteligence}\label{arte:palavraChave:Swarm}
+
+começar com o artigo: A correlation-based an miner for classification rule discovery
+
+\subsection{Data Mining - Swarm Robotics}\label{arte:palavraChave:Robotics}
+
+O rápido crescimento da Internet, tem trazido, a reboque, o contínuo crescimento da insegurança nos computadores e sistemas \cite{Barford2007}.
+Ataques utilizando à computadores através de robôs.
+
+\subsection{Deep Learning}\label{arte:palavraChave:Deep}
+
+
+
+\subsection{Machine Learning}\label{arte:palavraChave:Machine}
+
+O desafio dos 3 V's (Velocidade, Variedade e Volume) pode ser um fator determinístico na escolha da ferramenta mais adequada para se analisar dados do \textit{Big Data} e extrair informação. As árvores de decisão são algorimos rápidos, contudo dados impuros podem comprometer o desepenho desse algoritmo. A fase de extração dos dados do \textit{Big Data} são fortemente influenciáveis pelas variáveis escolhidas, \cite{DecisionTree} isso pode representar o desafio maior para implementar esta técnica, na figura a seguir exemplificamos essa tarefa:
+
+desenhar a figura
+
+% \begin{tikzpicture}
+%  \draw (0,0) -- (2,1); %reta
+% \end{tikzpicture}
+
+
 
 
 
@@ -509,26 +575,16 @@ Bari(t) = \frac{\sum_{i=1}^{N}x_i(t)W_1(t)}{\sum_{i=1}^{N}x_i(t)}
 
 
 
-\section{Arquiteturas atuais}
-
-Hadoop MapReduce é uma técnica recente, especialmente, projetado para o processamento de grandes conjuntos de dados distribuídos. Hadoop nasceu do Apache. O Apache é um servidor Web, o tal como o Hadoop. Servidores Web são computadores especialmente dedicados a traduzir programas feitos para Internet em página da Internet as quais pessoas possam ler, quando conectam-se `a Internet. MapReduce é um modelo de programação para expressar cálculo distribuído em quantidade maciça de
-dados e uma estrutura de execução para dados em larga escala e processamento em clusters de servidores. Foi originalmente desenvolvido pela Google e construído sobre o bem-conhecido
-princípios em paralelo e processamento distribuído.
-O Hadoop é a implementação de código aberto do MapReduce escrito em java que fornece, tolerância a falhas, escalável e confiável técnica de computação distribuída.
-O configurar o ambiente Hadoop envolve um grande número de parâmetros que são essenciais para alcançar um excelente desempenho. Ele permite que desenvolveres de aplicações distribuídas sem qualquer conhecimento possam programar computadores. 
-Um "Valor" e uma "chave" formam um par de dados, isso é a estrutura básica de dados do MapReduce. 
-Chaves e valores podem ser da forma de dados primitivos; como inteiros, ponto flutuante,  e bytes brutos ou podem ser estruturas arbitrárias e complexas (listas, tuplas matriz associativa, e outras)
 
 \section{Resultados esperados}
 
-Este Survey têm diversos propósitos preliminares e também conclusivos, para balizar nossa pesquisa, apontando o caminho
-mais promissor relacionado ao assunto escolhido, no nosso caso “Big Dada”. Um dos propósito é servir de referência científica
+Este Survey têm diversos propósitos preliminares e também conclusivos, para balizar pesquisas na área, apontando um caminho mais promissor relacionado ao assunto escolhido, no nosso caso “Big Dada”. Um dos propósito é servir de referência científica
 a qualquer de busca por conhecimento científico, mostrando o trabalho que o pesquisador deve ter, o cuidado ao procurar 
-esse conhecimento, sem contaminar-se na “floresta” de artigos científicos, dissertações e teses ofertados e, disponíveis
+esse conhecimento, sem contaminar-se na ``floresta'' de artigos científicos, dissertações e teses ofertados e, disponíveis
 hodiernamente na Internet. 
 
 Após a conclusão deste Survey, pretende-se incluir, os dados encontrados, no capítulo 2 da dissertação, servindo também 
-de exemplo para todo mestrando que se “aventurar” na busca “indiscriminada” por artigos, deixando de lado uma parte 
+de exemplo para todo mestrando que se aventurar na busca “indiscriminada” por artigos, deixando de lado uma parte 
 importante do seu trabalho que são os dados estatísticos dessa fase e que pode ter assim uma abordagem científica já na 
 fase inicial.
 A fase conclusiva, desse Survey, será a certeza de que o melhor caminho escolhido para o desenvolvimento das outras
@@ -624,6 +680,28 @@ isbn = {978-85-7522-278-2},
 pages = {153--162},
 year = {2012}
 
+%8.1
+\bibitem{Conejero2015}
+Conejero, Javier and Rana, Omer and Burnap, Peter and Morgan, Jeffrey and Caminero, Blanca and Carri{\'{o}}n, Carmen,
+title = {{Analysing Hadoop power consumption and impact on application QoS}},
+issn = {0167739X},
+journal = {Future Generation Computer Systems},
+mendeley-groups = {HadoopMapreduceinBigData},
+doi = {10.1016/j.future.2015.03.009},
+year = {2015}
+\href{http://linkinghub.elsevier.com/retrieve/pii/S0167739X15000643}{HadoopMapreduce}
+
+
+
+%8.2
+\bibitem{Lange2015}
+Lange, Benoit and Nguyen, Toan
+title = {{A Hadoop use case for engineering data}},
+mendeley-groups = {DataMiningBigData},
+year = {2015}
+
+
+
 %9
 \bibitem{Dean2008}
 Dean, Jeffrey and Ghemawat, Sanjay,
@@ -639,6 +717,21 @@ title = {{MapReduce : Simplified Data Processing on Large Clusters}},
 volume = {51},
 year = {2008}
 \href{http://portal.acm.org/citation.cfm?id=1327492}{MapReduce}
+
+
+%9.1
+\bibitem{Amin2015}
+Amin, Adnan and Faisal, Rahim and Imtiaz, Ali and Changez, Khan and Anwar, Sajid,
+title = {{A Comparison of Two Oversampling Techniques (SMOTE vs MTDF) for Handling Class Imbalance Problem: A Case Study of Customer Churn Prediction}},
+doi = {10.1007/978-3-319-16486-1},
+isbn = {978-3-319-16485-4},
+keywords = {big data,stock prediction,text mining},
+mendeley-groups = {DataMiningBigData},
+pages = {215--225},
+volume = {353},
+year = {2015},
+\href{http://link.springer.com/10.1007/978-3-319-16486-1}{stockprediction}
+
 
 
 %10
